<resources>
    <string name="app_name">University Airlines</string>
    <string name="registration_text">Registrazione avvenuta con successo!</string>
    <string name="subRegistration_text">Congratulazioni per esserti unito a University Airlines!</string>
    <string name="hint_origine">Origine</string>
    <string name="hint_destinazione">Destinazione</string>
    <string name="hint_andata">Andata</string>
    <string name="hint_ritorno">Ritorno</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_password">Password</string>
    <string name="login">Login</string>
    <string name="no_account_register">Non hai un account? Registrati</string>
    <string name="registrazione">Registrazione</string>
    <string name="terminiecondizioni_base">Confermo di aver letto il regolamento e accetto i Termini e Condizioni</string>
    <string name="terminiecondizioni">Termini e Condizioni</string>
    <string name="gotohomepage">Vai alla homepage</string>
    <string name="attenzione">Attenzione!</string>
    <string name="problema_riprovare">C\'è stato un problema durante la registrazione. \n Si prega di riprovare.</string>
    <string name="problema_riprovare_pagamento">C\'è stato un problema durante il pagamento. \n Si prega di riprovare</string>
    <string name="welcome_user">Ciao, %1$s \n\nEsplora</string>
    <string name="npasseggeri">N.passeggeri</string>
    <string name="piu">+</string>
    <string name="meno">-</string>
    <string name="cercavoli">Cerca Voli</string>
    <string name="selezionavolo">Seleziona il volo</string>
    <string name="cagliariExampleText">Cagliari, CAG</string>
    <string name="booking_details_flight">%1$s\n%2$s</string>
    <string name="airport_description">%1$s, %2$s</string>
    <string name="conferma">Conferma</string>
    <string name="nome">Nome</string>
    <string name="cognome">Cognome</string>
    <string name="passeggero">Passeggero %1$s</string>
    <string name="volo_selezionato">Volo selezionato</string>
    <string name="numero_passeggeri">Numero passeggeri : %1$s</string>
    <string name="numero_carta">Numero carta</string>
    <string name="totale_da_pagare">Totale da pagare:</string>
    <string name="scadenza">Scadenza</string>
    <string name="cvv">CVV</string>
    <string name="placeholder_price">%1$s %2$s</string>
    <string name="paga_ora">PAGA ORA</string>
    <string name="prenotation_description">Ecco il tuo codice di prenotazione,\nutilizzalo per il check-in!</string>
    <string name="prenotazione_confermata">Prenotazione confermata!</string>
    <string name="volo_acquistato">Volo acquistato</string>
    <string name="torna_alla_home">Torna alla Home</string>
    <string name="totale_pagato">Totale pagato:</string>
    <string name="numero_prenotazione">Numero prenotazione</string>
    <string name="check_in">Check-in</string>
    <string name="cerca">cerca</string>
    <string name="prenota_volo">prenota volo</string>
    <string name="effettua_check_in">Effettua Check-in</string>
    <string name="check_in_effettuato">Check-in effettuato!</string>
    <string name="check_in_advise">"Ricorda di visionare il nostro\ndocumento informativo sui\nbagagli non ammessi."</string>
    <string name="volo">Volo</string>
    <string name="reservation_list_shared_preferences" translatable="false">reservation_list_shared_preferences</string>
    <string name="username_shared_preferences" translatable="false">username_shared_preferences</string>
    <string name="shared_preferences" translatable="false">shared_preferences</string>
</resources>