<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/edittextorigine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding20"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="@dimen/padding20"
        android:background="@drawable/textinputborder"
        android:hint="@string/hint_origine"
        android:inputType="text"
        android:paddingStart="@dimen/padding20"
        android:paddingEnd="@dimen/padding20"
        android:textSize="@dimen/size24text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edittextdestinazione"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding20"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="@dimen/padding20"
        android:background="@drawable/textinputborder"
        android:hint="@string/hint_destinazione"
        android:inputType="text"
        android:paddingStart="@dimen/padding20"
        android:paddingEnd="@dimen/padding20"
        android:textSize="@dimen/size24text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edittextorigine" />

    <EditText
        android:id="@+id/edittextandata"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding20"
        android:layout_marginStart="@dimen/padding20"
        android:background="@drawable/textinputborder"
        android:hint="@string/hint_andata"
        android:layout_marginEnd="@dimen/padding5"
        android:paddingStart="@dimen/padding10"
        android:paddingEnd="@dimen/padding5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/edittextritorno"
        app:layout_constraintTop_toBottomOf="@id/edittextdestinazione" />


    <EditText
        android:id="@+id/edittextritorno"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/padding10"
        android:paddingEnd="@dimen/padding5"
        android:layout_marginTop="@dimen/padding20"
        android:layout_marginEnd="@dimen/padding20"
        android:layout_marginStart="@dimen/padding5"
        android:background="@drawable/textinputborder"
        android:hint="@string/hint_ritorno"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/edittextandata"
        app:layout_constraintTop_toBottomOf="@id/edittextdestinazione" />

</androidx.constraintlayout.widget.ConstraintLayout>