<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".homepage.HomepageActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding15"
        android:textColor="@color/blue_app"
        android:textSize="@dimen/size28text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Ciao, Mario \n\nEsplora" />

    <ImageView
        android:id="@+id/immagine1"
        android:layout_width="125dp"
        android:layout_height="100dp"
        android:layout_margin="@dimen/padding20"
        app:layout_constraintEnd_toStartOf="@id/immagine2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView"
        app:srcCompat="@drawable/roma" />

    <ImageView
        android:id="@+id/immagine2"
        android:layout_width="125dp"
        android:layout_height="100dp"
        android:layout_marginHorizontal="@dimen/padding20"
        app:layout_constraintStart_toEndOf="@id/immagine1"
        app:layout_constraintTop_toTopOf="@id/immagine1"
        app:srcCompat="@drawable/usa" />

    <ImageView
        android:id="@+id/immagine3"
        android:layout_width="125dp"
        android:layout_height="100dp"
        android:layout_margin="@dimen/padding20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/immagine1"
        app:srcCompat="@drawable/londra" />

    <ImageView
        android:id="@+id/immagine4"
        android:layout_width="125dp"
        android:layout_height="100dp"
        android:layout_margin="@dimen/padding20"
        app:layout_constraintStart_toEndOf="@id/immagine3"
        app:layout_constraintTop_toBottomOf="@id/immagine2"
        app:srcCompat="@drawable/parigi" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:text="@string/check_in"
        android:textColor="@color/blue_app"
        android:textSize="@dimen/size24text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextMultiLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/padding10"
        android:background="@drawable/textinputborder"
        android:hint="@string/numero_prenotazione"
        android:inputType="text"
        android:paddingHorizontal="@dimen/padding30"
        android:paddingVertical="@dimen/padding10"
        app:layout_constraintStart_toStartOf="@id/textView2"
        app:layout_constraintTop_toBottomOf="@id/textView2" />

    <Button
        android:id="@+id/buttonCerca"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/padding10"
        android:backgroundTint="@color/blue_app"
        android:paddingHorizontal="@dimen/padding30"
        android:text="@string/cerca"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/editTextTextMultiLine" />

    <Button
        android:id="@+id/buttonPrenotazione"
        android:layout_width="283dp"
        android:layout_height="66dp"
        android:layout_marginStart="46dp"
        android:layout_marginEnd="46dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/blue_app"
        android:text="@string/prenota_volo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.944" />


</androidx.constraintlayout.widget.ConstraintLayout>